add:excel import ; add:user-types & functionality ; add:import list panel ; prep: virtual wallet functions

--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -120,6 +120,7 @@
                 <li><a href="/admin/estimates">View Estimates</a></li>
                 <li><a href="/admin/customers">View Customers</a></li>
                 <li><a href="/admin/packages">Manage Packages</a></li>
+                <li><a href="/admin/package-lists">Manage Rate Lists</a></li>
                 <li><a href="/admin/branches">Manage Branches</a></li>
                 <li><a href="/admin/users">Manage Users</a></li>
             </ul>
