patch: pacakge list bug

--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -119,7 +119,7 @@
                 <li><a href="/admin/receipts">View Receipts</a></li>
                 <li><a href="/admin/estimates">View Estimates</a></li>
                 <li><a href="/admin/customers">View Customers</a></li>
-                <li><a href="/admin/packages">Manage Packages</a></li>
+                <li><a href="/admin/labs">Manage Labs & Rates</a></li>
                 <li><a href="/admin/package-lists">Manage Rate Lists</a></li>
                 <li><a href="/admin/branches">Manage Branches</a></li>
                 <li><a href="/admin/users">Manage Users</a></li>
