--- a/views/form_estimate.ejs
+++ b/views/form_estimate.ejs
@@ -266,6 +266,12 @@
                     </select>
                 </div>
                 <div>
+                    <label for="package_list_selection">Select Rate Database:</label>
+                    <select id="package_list_selection" name="package_list_id" required>
+                        <option value="">-- Select a Lab First --</option>
+                    </select>
+                </div>
+                <div>
                     <label for="estimate_date">Estimate Date:</label>
                     <input type="text" id="estimate_date" name="estimate_date" placeholder="DD/MM/YYYY" required class="flatpickr-date">
                 </div>
