--- a/views/form_receipt.ejs
+++ b/views/form_receipt.ejs
@@ -466,6 +466,12 @@
                         <option value="">-- Select a Lab First --</option>
                     </select>
                 </div>
+                <div>
+                    <label for="package_list_selection">Select Rate Database:</label>
+                    <select id="package_list_selection" name="package_list_id" required>
+                        <option value="">-- Select a Lab First --</option>
+                    </select>
+                </div>
                 <div class="full-width">
                     <label for="referred_by">Referred By Dr.:</label>
                     <input type="text" id="referred_by" name="referred_by">
